// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c7 {
  font-size: 1.5rem;
}

.c4 {
  font-family: 'Roboto',sans-serif;
  color: #666666;
  line-height: 1.5;
  margin-bottom: 0px;
  margin-top: 0px;
  color: #666666;
  font-family: 'Roboto',sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  line-height: 1.2;
}

.c0 {
  border: 1px solid #999999;
  background-color: white;
}

.c5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  background-color: #1e7998;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  padding: 0px 16px;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #999999;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: white;
  cursor: pointer;
}

.c9 {
  padding: 16px;
  border-top: 1px solid #999999;
}

.c6 {
  color: white;
  font-size: 2rem;
}

.c8 {
  padding: 16px;
}

.c3 {
  padding: 16px;
}

<styled.div>
  <div
    className="c0"
  >
    <styled.div
      open={true}
    >
      <div
        className="c1"
        open={true}
      >
        <styled.div
          active={false}
          onClick={[Function]}
          toggleOnHeaderClick={true}
        >
          <div
            className="c2"
            onClick={[Function]}
          >
            <Styled(Typography)>
              <styled.span
                as="h5"
                className="c3"
                variant="h5"
              >
                <h5
                  className="c3 c4"
                >
                  Text header
                </h5>
              </styled.span>
            </Styled(Typography)>
          </div>
        </styled.div>
        <styled.div
          onClick={[Function]}
        >
          <div
            className="c5"
            onClick={[Function]}
          >
            <Styled(DropdownIcon)
              icon="expand_more"
              open={true}
            >
              <styled.i
                className="material-icons c6"
                style={
                  Object {
                    "transform": "rotate(0deg)",
                  }
                }
              >
                <i
                  className="material-icons c6 c7"
                  style={
                    Object {
                      "transform": "rotate(0deg)",
                    }
                  }
                >
                  expand_more
                </i>
              </styled.i>
            </Styled(DropdownIcon)>
          </div>
        </styled.div>
      </div>
    </styled.div>
    <div
      style={
        Object {
          "height": 0,
          "opacity": 1,
          "overflow": "visible",
        }
      }
    >
      <styled.div>
        <div
          className="c8"
        >
          <div>
            Collapse children
          </div>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c9"
        >
          <button>
            Footer button
          </button>
        </div>
      </styled.div>
    </div>
  </div>
</styled.div>
`;

exports[`renders correctly 2`] = `
.c5 {
  font-size: 1.5rem;
}

.c0 {
  border: 1px solid #999999;
  background-color: white;
}

.c3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  background-color: #1e7998;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  padding: 0px 16px;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #999999;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: white;
  cursor: pointer;
}

.c7 {
  padding: 16px;
  border-top: 1px solid #999999;
}

.c4 {
  color: white;
  font-size: 2rem;
}

.c6 {
  padding: 16px;
}

<styled.div>
  <div
    className="c0"
  >
    <styled.div
      open={true}
    >
      <div
        className="c1"
        open={true}
      >
        <styled.div
          active={false}
          onClick={[Function]}
          toggleOnHeaderClick={true}
        >
          <div
            className="c2"
            onClick={[Function]}
          >
            <div>
              Element header
            </div>
          </div>
        </styled.div>
        <styled.div
          onClick={[Function]}
        >
          <div
            className="c3"
            onClick={[Function]}
          >
            <Styled(DropdownIcon)
              icon="expand_more"
              open={true}
            >
              <styled.i
                className="material-icons c4"
                style={
                  Object {
                    "transform": "rotate(0deg)",
                  }
                }
              >
                <i
                  className="material-icons c4 c5"
                  style={
                    Object {
                      "transform": "rotate(0deg)",
                    }
                  }
                >
                  expand_more
                </i>
              </styled.i>
            </Styled(DropdownIcon)>
          </div>
        </styled.div>
      </div>
    </styled.div>
    <div
      style={
        Object {
          "height": 0,
          "opacity": 1,
          "overflow": "visible",
        }
      }
    >
      <styled.div>
        <div
          className="c6"
        >
          <div>
            Collapse children
          </div>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c7"
        >
          <button>
            Footer button
          </button>
        </div>
      </styled.div>
    </div>
  </div>
</styled.div>
`;

exports[`renders correctly when closed 1`] = `
.c7 {
  font-size: 1.5rem;
}

.c4 {
  font-family: 'Roboto',sans-serif;
  color: #666666;
  line-height: 1.5;
  margin-bottom: 0px;
  margin-top: 0px;
  color: #666666;
  font-family: 'Roboto',sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  line-height: 1.2;
}

.c0 {
  border: 1px solid #999999;
  background-color: white;
}

.c5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  background-color: #1e7998;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  padding: 0px 16px;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: white;
  cursor: pointer;
}

.c9 {
  padding: 16px;
  border-top: 1px solid #999999;
}

.c6 {
  color: white;
  font-size: 2rem;
}

.c8 {
  padding: 16px;
}

.c3 {
  padding: 16px;
}

<styled.div>
  <div
    className="c0"
  >
    <styled.div
      open={false}
    >
      <div
        className="c1"
        open={false}
      >
        <styled.div
          active={false}
          onClick={[Function]}
          toggleOnHeaderClick={true}
        >
          <div
            className="c2"
            onClick={[Function]}
          >
            <Styled(Typography)>
              <styled.span
                as="h5"
                className="c3"
                variant="h5"
              >
                <h5
                  className="c3 c4"
                >
                  Header
                </h5>
              </styled.span>
            </Styled(Typography)>
          </div>
        </styled.div>
        <styled.div
          onClick={[Function]}
        >
          <div
            className="c5"
            onClick={[Function]}
          >
            <Styled(DropdownIcon)
              icon="expand_more"
              open={false}
            >
              <styled.i
                className="material-icons c6"
                style={
                  Object {
                    "transform": "rotate(0deg)",
                  }
                }
              >
                <i
                  className="material-icons c6 c7"
                  style={
                    Object {
                      "transform": "rotate(0deg)",
                    }
                  }
                >
                  expand_more
                </i>
              </styled.i>
            </Styled(DropdownIcon)>
          </div>
        </styled.div>
      </div>
    </styled.div>
    <div
      style={
        Object {
          "height": 0,
          "opacity": 1,
          "overflow": "visible",
        }
      }
    >
      <styled.div>
        <div
          className="c8"
        >
          <div>
            Hello world!
          </div>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c9"
        >
          <div>
            footer
          </div>
        </div>
      </styled.div>
    </div>
  </div>
</styled.div>
`;
